--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>MPC app</title>
+        <link rel="icon" href="./dist/lil mp coin.png">
     </head>
     <body>
         <div id="app"></div>
@@ -10,6 +11,6 @@
         <script src="./node_modules/react/dist/react.js"></script>
         <script src="./node_modules/react-dom/dist/react-dom.js"></script>
 
-        <script src="./dist/bundle.js"></script>
+        <script src="./dist/app.bundle.js"></script>
     </body>
 </html>
